@@ -1753,9 +1753,9 @@ main(int argc, const char **argv)
   extern BOOL NSImageDoesCaching;
 
   NSImageDoesCaching = YES;
-  //[NSObject enableDoubleReleaseCheck: YES];
-  
-  //  [GormPosingView poseAsClass: [NSView class]];
+
+  //[NSObject enableDoubleReleaseCheck: YES];  
+  //[GormPosingView poseAsClass: [NSView class]];
 
   startDate = [[NSDate alloc] init];
   NSApplicationMain(argc, argv);
